# nbody

./: .gitignore  CMakeLists.txt  LICENSE  cmake_install.cmake  main.cpp
include/: utils.h
include/nbody/: utils.h
src/: acceleration.cpp  acceleration.h  body.cpp  body.h  constants.h  force.cpp  force.h  simulation.cpp  simulation.h  trajectory.cpp  trajectory.h  utils.cpp  vector.cpp  vector.h
